# po

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  copyfiles.cmake  playground.cpp
assets/: zobrist-prn-seq.data
assets/chess-sprites/wip/: pawn_b.aseprite  pawn_w.aseprite
assets/iris/: test.data
assets/shaders/: board.fs  main.vs
iris/: train.data
shaders/: board.fs  main.fs  main.vs
shaders/basic-rectangle/: rect.fs  rect.vs
shaders/board/: board.fs
shaders/pieces/: pieces.fs
src/: main.cpp
src/game/: game.cpp  game.h
src/game/ai/: dumdum.cpp  dumdum.h  search.cpp  search.h  transposition-table.cpp  transposition-table.h
src/game/engine/: painter.h  resource-manager.cpp  resource-manager.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h
src/game/engine/basic-shapes/: rectangle.hpp
src/game/engine/io/: mouse.cpp  mouse.h  window.cpp  window.h
src/game/logic/: board.cpp  board.h  piece.cpp  piece.h
src/game/ui/: ui.cpp  ui.h
src/game/utilities/: bitboard.cpp  bitboard.h  ibr.h  rectangle.h  zobrist-hash.cpp  zobrist-hash.h
src/logger/: logger.cpp  logger.h
src/rtw/: dectree.cpp  dectree.h  matop.cpp  matop.h
tests/: CMakeLists.txt  bitboard-test.cpp  movegen-test.cpp
